--- a/tae-youtube/src/assests/scss/style.scss
+++ b/tae-youtube/src/assests/scss/style.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-//setting
+// setting
 @import "setting/fonts";
 @import "setting/vars";
 @import "setting/reset";
@@ -10,3 +10,4 @@
 // section
 @import "section/layout";
 @import "section/header";
+@import "section/search";
