--- a/tae-youtube/src/assets/scss/section/_header.scss
+++ b/tae-youtube/src/assets/scss/section/_header.scss
@@ -1,5 +1,9 @@
 .header__logo {
-    border-bottom: 1px solid var(--black200);
+    border-bottom: 1px solid var(--black100);
+
+    @media (max-width: 800px){
+        border-bottom: 0;
+    }
 
     a {
         display: flex;
@@ -24,11 +28,12 @@
     }
 }
 
-
 .header__menu {
     padding: 10px 0;
 
     .menu {
+        border-bottom: 1px solid var(--black100);
+
         li {
             margin-bottom: 5px;
 
@@ -36,33 +41,41 @@
                 font-size: 1rem;
                 display: block;
                 padding: 0.9rem 2rem 0.9rem 3.125rem;
-                margin: 0 0.5rem;
+                margin: 0 0.625rem;
                 border-radius: 40px;
+                position: relative;
+                line-height: 1;
                 color: var(--white200);
                 transition: all 0.3s;
 
-                background-color: #111;
+                svg {
+                    width: 1.25rem;
+                    height: 1.25rem;
+                    position: absolute;
+                    left: 1.25rem;
+                    top: 0.75rem;
+                }
 
-                &:hover{
-                    background-color: var(--black200);
+                &:hover {
+                    background-color: var(--black100);
                     color: var(--white);
                 }
             }
-            &.active a{
+
+            &.active a {
                 background-color: var(--black100);
                 color: var(--white);
             }
-            
         }
     }
 
-
     .keyword {
         padding: 1.25rem;
-        
-        li{
+
+        li {
             display: inline-block;
-            a{
+
+            a {
                 display: inline-block;
                 padding: 5px 15px;
                 border: 1px solid var(--black200);
@@ -71,20 +84,19 @@
                 margin: 3px 1px;
                 transition: all 0.3s;
 
-            &:hover{
-                background-color: var(--black200);
-                color: var(--white);
+                &:hover {
+                    background-color: var(--black100);
+                    color: var(--white);
+                }
             }
-            } 
-            
-            &.active a{
+
+            &.active a {
                 background-color: var(--black100);
                 color: var(--white);
             }
         }
     }
 }
-
 
 .header__sns {
     position: fixed;
@@ -94,12 +106,18 @@
     width: 260px;
     text-align: center;
     padding: 15px 0 10px;
-    background-color: var(--black);
+    background-color: var(--blackAlpha100);
+    backdrop-filter: blur(10px);
 
-    li{
+    @media (max-width: 800px){
+        display: none;
+    }
+
+    li {
         display: inline-block;
-        a{
-            padding: 5px 7px ;
+
+        a {
+            padding: 5px 7px;
             display: inline-block;
         }
     }
@@ -110,14 +128,12 @@
         transform: rotate(0) scale(1);
         border-radius: 0;
     }
-
     50% {
         transform: rotate(720deg) scale(0.5);
         border-radius: 20px;
     }
-
     100% {
-        transform: rotate(0deg) scale(1);
+        transform: rotate(0) scale(1);
         border-radius: 0;
     }
 }
