--- a/tae-youtube/src/assets/scss/style.scss
+++ b/tae-youtube/src/assets/scss/style.scss
@@ -13,4 +13,5 @@
 @import "section/search";
 @import "section/today";
 @import "section/var";
-@import "section/developer"
+@import "section/developer";
+@import "section/video";
