--- a/fila_web/src/assets/scss/section/_layout.scss
+++ b/fila_web/src/assets/scss/section/_layout.scss
@@ -5,7 +5,7 @@
     width: 1920px;
     height: 950px;
     z-index: 10000;
-    background-color: #000;
+    background: url(../../img/Header_img1.svg);
 }
 #main {
     width: 1920px;
