--- a/yes24/src/assets/scss/style.scss
+++ b/yes24/src/assets/scss/style.scss
@@ -31,6 +31,7 @@
             width: 992px;
             height: 48px;
             display: flex;
+
             input {
                 padding: 10px 35px 10px 14px;
                 width: 90%;
@@ -43,7 +44,8 @@
                 background: transparent;
                 letter-spacing: 0;
             }
-            img{
+
+            img {
                 position: relative;
                 width: 40px;
                 right: 1px;
@@ -52,3 +54,227 @@
         }
     }
 }
+
+.mainDiv {
+    width: 1024px;
+    height: 657px;
+    margin: auto;
+    display: block;
+    background-color: rgba(0, 0, 0, 0.05);
+
+    .line {
+        background-color: #0080ff;
+        height: 3px;
+        width: 1024px;
+    }
+
+    .bookInfo {
+        background-color: #fff;
+    }
+
+    .mainsec {
+        display: flex;
+        background-color: rgba(0, 0, 0, 0.05);
+
+        .mainSec1 {
+            width: 502px;
+            height: 488px;
+            flex: 1;
+
+            .slide_img {
+                width: 100%;
+                height: auto;
+            }
+        }
+
+        .mainSec2 {
+            width: 502px;
+            height: 488px;
+            background-color: #fff;
+        }
+    }
+
+}
+
+.banner {
+    width: 1024px;
+    height: 150px;
+    margin: auto;
+
+    .bannerdiv {
+        width: 1024px;
+        height: 150px;
+    }
+}
+
+.navSec {
+    width: 1024px;
+    height: 150px;
+    margin: auto;
+
+    .navch {
+        width: 1024px;
+        height: 48px;
+        display: flex;
+        position: sticky;
+        top: 0;
+        cursor: pointer;
+
+        div {
+            position: sticky;
+            width: 341px;
+            height: 48px;
+            line-height: 48px;
+            border-top: solid 1px black;
+            border-bottom: solid 1px black;
+            text-align: center;
+            background-color: #fff;
+        }
+    }
+    .reviewSection {
+        padding: 20px;
+        font-family: Arial, sans-serif;
+      }
+      
+      .reviewHeader {
+        display: block;
+        font-size: 16px;
+        font-weight: bold;
+        margin-bottom: 10px;
+      }
+      
+      .reviewInput {
+        display: flex;
+        align-items: center;
+        margin-bottom: 10px;
+      }
+      
+      .reviewInput input {
+        flex: 1;
+        padding: 8px;
+        margin-right: 10px;
+        border: 1px solid #ddd;
+        border-radius: 4px;
+      }
+      
+      .reviewInput p {
+        color: #888;
+        font-size: 12px;
+      }
+      
+      .rating {
+        display: flex;
+        align-items: center;
+        margin-bottom: 15px;
+        font-size: 18px;
+      }
+      
+      .ratingStars {
+        color: #f0c14b;
+        margin-right: 10px;
+        text-align: center;
+      }
+      
+      .ratingScore {
+        font-weight: bold;
+      }
+      
+}
+
+.footer {
+    display: block;
+    width: 1190px;
+    margin: auto;
+    top: 1300px;
+    position: relative;
+    background-color: #f5f5f5;
+    padding: 20px 0px;
+    text-align: center;
+    font-size: 14px;
+    color: #666;
+
+    .footer-buttons {
+        margin-bottom: 15px;
+
+        button {
+            margin: 0 10px;
+            padding: 10px 20px;
+            background-color: #eee;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            cursor: pointer;
+
+            &:hover {
+                background-color: #ddd;
+            }
+        }
+    }
+
+    .footer-info, .footer-company {
+        margin-bottom: 20px;
+        line-height: 1.6;
+    }
+
+    .footer-links {
+        margin-top: 20px;
+
+        a {
+            margin: 0 10px;
+            color: #666;
+            text-decoration: none;
+
+            &:hover {
+                color: #333;
+            }
+        }
+    }
+}
+
+.shopping-bar {
+    bottom: 0;
+    width: 1170px;
+    position: fixed;
+    display: block;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #f0f0f0; 
+    padding: 10px;
+    z-index: 999;
+    border-top: solid 1px #ccc;
+    background-color: #eee;
+    align-self: start;
+
+    .cart-button {
+        flex: 1;
+        background-color: #196ab3;
+        color: white;
+        border: none;
+        padding: 15px;
+        font-size: 16px;
+        width: 474px;
+        height: 42px;
+        border-radius: 5px;
+      }
+      
+    .buy-button {
+        flex: 1;
+        background-color: #199db3;
+        border: none;
+        padding: 15px;
+        font-size: 16px;
+        width: 474px;
+        height: 42px;
+        color: #fff;
+        border-radius: 5px;
+      }
+      
+    button {
+        cursor: pointer;
+      }
+      
+    button:hover {
+        opacity: 0.9;
+      }
+  }
+  
+ 
